src/scss/forminator-ui/_grid.scss
@include body-class(custom-form) {

	// SPACING: Default
	&:not(.forminator-enclosed):not(.forminator-custom) {

		// ELEMENT: Row
		.forminator-row {

			&:not(:last-child) {
				margin-bottom: $gutter-sm;
			}
		}

		// ELEMENT: Column
		.forminator-col {

			&:not(:last-child) {
				margin-bottom: $gutter-sm;
			}
		}
	}

	// SPACING: Enclosed
	&.forminator-enclosed {

		// ELEMENT: Row
		.forminator-row {

			&:not(:last-child) {
				margin-bottom: $gutter-enclosed-sm;
			}
		}

		// ELEMENT: Column
		.forminator-col {

			&:not(:last-child) {
				margin-bottom: $gutter-enclosed-sm;
			}
		}
	}

	&:not(.forminator-size--small) {

		// ELEMENT: Row
		.forminator-row {

			@include media(min-width, md) {
				display: flex;
			}
		}

		// ELEMENT: Column
		.forminator-col {

			&:not(:last-child) {

				@include media(min-width, md) {
					margin-bottom: 0;
				}
			}

			@include media(min-width, md) {
				flex: 1;
			}
		}

		// SPACING: Default
		&:not(.forminator-enclosed):not(.forminator-custom) {

			// ELEMENT: Row
			.forminator-row {

				@include media(min-width, md) {
					margin-right: -#{$gutter / 2};
					margin-left: -#{$gutter / 2};
				}
			}

			// ELEMENT: Column
			.forminator-col {

				&:not(:last-child) {

					@include media(min-width, md) {
						margin-bottom: 0;
					}
				}

				@include media(min-width, md) {
					padding: 0 #{$gutter / 2};
				}
			}
		}

		// SPACING: Enclosed
		&.forminator-enclosed {

			// ELEMENT: Row
			.forminator-row {

				@include media(min-width, md) {
					margin-right: -#{$gutter-enclosed / 2};
					margin-left: -#{$gutter-enclosed / 2};
				}
			}

			// ELEMENT: Column
			.forminator-col {

				@include media(min-width, md) {
					padding: 0 #{$gutter-enclosed / 2};
				}
			}
		}
	}
}

